--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>BuildSense</title>
 </head>
 <body>
-    <iframe src="https://gamma.app/embed/gujng3ipc7vf8dk" style="width: 700px; max-width: 100%; height: 450px" allow="fullscreen" title="BuildSense: 未来，从此开始"></iframe>
+<!--      style="width: 700px; max-width: 100%; height: 450px" allow="fullscreen" title="BuildSense: 未来，从此开始"></iframe> -->
+     <iframe src="https://gamma.app/embed/gujng3ipc7vf8dk" width="100%" height="100%" title="BuildSense: 未来，从此开始" frameborder="0"></iframe>
 </body>
 </html>
