--- a/index.html
+++ b/index.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
-<html lang="zh-CN">
+<html lang="zh-CN" style="height: 100%; width: 100%;">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>BuildSense</title>
 </head>
-<body>
+<body style="height: 100%; width: 100%; margin: 0; padding: 0;">
 <!--      style="width: 700px; max-width: 100%; height: 450px" allow="fullscreen" title="BuildSense: 未来，从此开始"></iframe> -->
-     <iframe src="https://gamma.app/embed/gujng3ipc7vf8dk" width="100%" height="100%" title="BuildSense: 未来，从此开始" frameborder="0"></iframe>
+     <iframe src="https://gamma.app/embed/gujng3ipc7vf8dk" style="width: 100%; height: 100%;" allow="fullscreen" title="BuildSense: 未来，从此开始"></iframe>
 </body>
 </html>
